// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge Bottom Left Anchor 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginBottomLeftCircle MuiBadge-colorPrimary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Bottom Right Anchor 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle MuiBadge-colorPrimary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Circle Overlap 1`] = `
<div
  className="BadgeDemo-root-1"
>
  <span
    className="MuiBadge-root"
  >
    <div
      className="BadgeDemo-shape-2"
    />
    <span
      className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
    >
      99+
    </span>
  </span>
  <span
    className="MuiBadge-root"
  >
    <div
      className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
    />
    <span
      className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
    >
      99+
    </span>
  </span>
  <span
    className="MuiBadge-root"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-communication-email NatDSIcon-root-4 NatDSIcon-root-5"
    />
    <span
      className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
    >
      99+
    </span>
  </span>
</div>
`;

exports[`Storyshots Components/Badge Default Color 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Dot Variant 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary MuiBadge-dot"
  >
    
  </span>
</span>
`;

exports[`Storyshots Components/Badge Error Color 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorError"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Playground 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Primary Color 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Rectangle Overlap 1`] = `
<div
  className="BadgeDemo-root-1"
>
  <span
    className="MuiBadge-root"
  >
    <div
      className="BadgeDemo-shape-2"
    />
    <span
      className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      99+
    </span>
  </span>
  <span
    className="MuiBadge-root"
  >
    <div
      className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
    />
    <span
      className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      99+
    </span>
  </span>
  <span
    className="MuiBadge-root"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-communication-email NatDSIcon-root-4 NatDSIcon-root-5"
    />
    <span
      className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      99+
    </span>
  </span>
</div>
`;

exports[`Storyshots Components/Badge Secondary Color 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorSecondary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Standard Variant 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Top Left Anchor 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopLeftCircle MuiBadge-colorPrimary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge Top Right Anchor 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="BadgeDemo-shape-2 BadgeDemo-shapeCircle-3"
  />
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
  >
    99+
  </span>
</span>
`;

exports[`Storyshots Components/Badge With Filter Icon 1`] = `
<span
  className="MuiBadge-root"
>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-filter NatDSIcon-root-1 NatDSIcon-root-2"
  />
  <span
    className="MuiTypography-root MuiTypography-srOnly"
  >
    Filters (1 active)
  </span>
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary"
  >
    1
  </span>
</span>
`;
